--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
