--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "paths": {
       "@/src": ["src"],
       "@/src/*": ["src/*"]
-    },
+    }
   },
-    "include": ["src", "tests"]    ,
+  "include": ["src", "tests", "example"]
 }
