--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
     "example:run": "ts-node ./example/index.ts",
-    "replace-tspaths": "./scripts/replace-tspaths/index.js"
+    "replace-tspaths": "./scripts/replace-tspaths/index.mjs"
   },
   "dependencies": {
     "@types/js-yaml": "^4.0.5",
