--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint --ext .ts --max-warnings=0 --fix .",
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
-    "example:run": "ts-node ./example/index.ts",
-    "replace-tspaths": "./scripts/replace-tspaths/index.mjs"
+    "replace-tspaths": "./scripts/replace-tspaths/index.mjs",
+    "example:run": "ts-node -r tsconfig-paths/register ./example/index.ts"
   },
   "dependencies": {
     "@types/js-yaml": "^4.0.5",
@@ -37,6 +37,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   }
 }
