--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,6 +1,10 @@
-socialMedia: [https://twitter.com/example, https://instagram.com/example, 1]
-features:
-  - name: Store
-    enabled: true
-  - name: Admin
-    enabled: false
+database:
+  host: https://cosa.com
+  port: 5432asdasdasd
+test:
+  arrayoption: [aaa, bbb]
+  objarray:
+    - cosa: asd
+      test: 23
+    - cosa: asdasda
+      test: 233asdasdas
