fix: create InvalidValue to avoid using null in object search and object validation, fixes #15

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
       "@/option": ["src/option"],
       "@/option/*": ["src/option/*"],
       "@/src": ["src"],
-      "@/types": ["src/types"]
+      "@/types": ["src/types"],
+      "@/utils": ["src/utils"]
     }
   },
   "include": ["src", "tests", "example"]
