chore: add sem release token

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
     needs: [code-checks]
     uses: ./.github/workflows/_sem_release.yaml
     secrets:
-      semantic-release-token: ${{ secrets.GITHUB_TOKEN }}
+      semantic-release-token: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
       npm-token: ${{ secrets.NPM_TOKEN }}
     permissions:
       contents: write
