--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -29,6 +29,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'yarn'
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build to dist folder
+        run: yarn build
       - name: Release
         uses: cycjimmy/semantic-release-action@v3
         with:
