chore: tested additional values when testing bool arrays

--- a/tests/__mocks__/settings/no-cli-no-env/nestedBoolArray.yaml
+++ b/tests/__mocks__/settings/no-cli-no-env/nestedBoolArray.yaml
@@ -2,6 +2,12 @@ database:
   bools:
   - true
   - false
+  - 'true'
+  - 'false'
+  - "true"
+  - "false"
+  - !!str true
+  - !!str false
   - 1
   - 0
   - '1'
