--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "eslint --ext .ts --max-warnings=0 --fix .",
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
+    "replace-tspaths": "./scripts/replace-tspaths/index.mjs",
     "example:run": "ts-node -r tsconfig-paths/register ./example/index.ts",
     "prepare": "husky install",
     "docs:install": "python -m venv ./mkdocs-py-env && ./mkdocs-py-env/Scripts/pip install -r ./mkdocs-requirements.txt",
@@ -31,7 +32,6 @@
     "docs:serve": "./mkdocs-py-env/Scripts/mkdocs serve"
   },
   "dependencies": {
-    "@types/js-yaml": "^4.0.5",
     "commander": "^8.3.0",
     "js-yaml": "^4.1.0",
     "tslib": "^2.3.0"
@@ -40,6 +40,7 @@
     "@meltstudio/eslint-config": "^1.1.0",
     "@meltstudio/tsconfig": "^2.0.1",
     "@types/jest": "^27.5.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
@@ -52,6 +53,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "globby": "^13.2.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporters": "^3.1.4",
