feat: simplified public api for creating schema and loading settings
All the imports are now done from the root of the package. This makes it
easier to use the package.

Instead of importing the Settings class, now the user can import the
default object with a `schema` function. This function returns a
SettingsBuilder object that can be used to create a schema and load
configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,13 @@
     "noUncheckedIndexedAccess": false,
     "outDir": "./dist",
     "paths": {
+      "@/builder": ["src/builder"],
+      "@/builder/*": ["src/builder/*"],
       "@/nodes/*": ["src/nodes/*"],
       "@/option": ["src/option"],
       "@/option/*": ["src/option/*"],
       "@/src": ["src"],
+      "@/settings": ["src/settings"],
       "@/types": ["src/types"],
       "@/utils": ["src/utils"]
     }
