feat: replace process.exit(1) with typed ConfigLoadError
Instead of calling process.exit(1) on validation failure, throw structured
ConfigLoadError/ConfigFileError with typed ConfigErrorEntry objects. Consumers
can now catch errors gracefully. An opt-in exitOnError flag preserves the old
CLI behavior.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "@/option": ["src/option"],
       "@/option/*": ["src/option/*"],
       "@/src": ["src"],
+      "@/errors": ["src/errors"],
       "@/settings": ["src/settings"],
       "@/types": ["src/types"],
       "@/utils": ["src/utils"]
