--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "build": "rimraf ./dist && tsup src/index.ts --dts --config tsconfig.build.json",
-    "lint": "eslint --ext .ts --max-warnings=0 --fix .",
+    "lint": "eslint --max-warnings=0 --fix .",
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
     "replace-tspaths": "./scripts/replace-tspaths/index.mjs",
@@ -37,22 +37,17 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@meltstudio/eslint-config": "^1.1.0",
+    "@eslint/js": "^9.20.0",
     "@meltstudio/tsconfig": "^2.0.1",
     "@types/jest": "^27.5.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "17.0.31",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint": "^9.20.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "typescript-eslint": "^8.24.0",
     "globby": "^13.2.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
