--- a/.github/workflows/_code_checks.yaml
+++ b/.github/workflows/_code_checks.yaml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: 'Setup node with cache'
+      - name: "Setup node with cache"
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "18"
+          cache: "yarn"
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Run lint
@@ -21,10 +21,10 @@ jobs:
       - name: Run tests
         run: yarn test
       - name: Run prettier
-        run: yarn prettier --check
+        run: yarn prettier --check .
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11.3'
+          python-version: "3.11.3"
       - name: Setup mkdocs environment
         run: python -m pip install -r mkdocs-requirements.txt
       - name: Build mkdocs
