chore: format all project files with prettier and update .prettierignore
Run prettier on all project files that were never formatted (workflow
files, YAML fixtures, config files). Update .prettierignore to exclude
generated directories (coverage, dist, .claude) and local-only files.

--- a/.github/workflows/_mkdocs_publish.yaml
+++ b/.github/workflows/_mkdocs_publish.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     secrets:
       mkdocs-token:
-        description: 'GitHub token for mkdocs'
+        description: "GitHub token for mkdocs"
         required: true
 
 env:
