--- a/tests/__mocks__/settings/no-cli-no-env/nestedBool.yaml
+++ b/tests/__mocks__/settings/no-cli-no-env/nestedBool.yaml
@@ -3,8 +3,8 @@ database:
   bool2: false
   bool3: 1
   bool4: 0
-  bool5: '1'
-  bool6: '0'
+  bool5: "1"
+  bool6: "0"
   bool7: "1"
   bool8: "0"
   bool9: !!str 1
