--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "repository": "https://github.com/MeltStudio/config-loader",
   "author": "MeltStudio <dev@meltstudio.co>",
   "license": "Apache-2.0",
+  "engines": {
+    "node": ">=20"
+  },
   "keywords": [
     "configuration",
     "config",
@@ -41,18 +44,17 @@
     "@meltstudio/tsconfig": "^2.0.1",
     "@types/jest": "^27.5.0",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "17.0.31",
+    "@types/node": "^20.0.0",
     "eslint": "^9.20.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jest": "^29.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript-eslint": "^8.24.0",
-    "globby": "^13.2.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporters": "^3.1.4",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^16.0.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
