--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "commander": "^8.3.0",
     "js-yaml": "^4.1.0",
+    "js-yaml-source-map": "^0.2.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "eslint-plugin-jest": "^29.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript-eslint": "^8.24.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-html-reporters": "^3.1.4",
@@ -60,6 +60,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "typescript-eslint": "^8.24.0"
   }
 }
