--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-html-reporters": "^3.1.4",
     "lint-staged": "^16.0.0",
     "prettier": "^2.8.8",
+    "rimraf": "^6.1.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
