fix(ci): modernize semantic-release and GitHub Actions setup
- Use built-in GITHUB_TOKEN instead of a PAT for git push and GitHub
  releases (removes need for SEMANTIC_RELEASE_TOKEN secret)
- Remove persist-credentials: false so the checkout token is available
- Add id-token: write permission for npm provenance via OIDC
- Update cycjimmy/semantic-release-action from v3 to v4 (semantic-release v24)
- Drop pinned plugin versions — let semantic-release resolve compatible ones
- Update all actions to v4 (checkout, setup-node, setup-python)
- Update styfle/cancel-workflow-action to 0.12.1

--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -3,29 +3,28 @@ name: Run semantic release
 on:
   workflow_call:
     secrets:
-      semantic-release-token:
-        description: "GitHub token for semantic release"
-        required: true
       npm-token:
-        description: "NPM token for semantic release"
+        description: "NPM token for publishing"
         required: true
 
 env:
   HUSKY: 0
-  GITHUB_TOKEN: ${{ secrets.semantic-release-token }}
-  NPM_TOKEN: ${{ secrets.npm-token }}
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          persist-credentials: false
           fetch-depth: 0
       - name: "Setup node with cache"
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "yarn"
@@ -34,11 +33,12 @@ jobs:
       - name: Build to dist folder
         run: yarn build
       - name: Release
-        uses: cycjimmy/semantic-release-action@v3
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.npm-token }}
         with:
-          semantic_version: 19.0.5
           extra_plugins: |
-            @semantic-release/changelog@6.0.1
-            @semantic-release/git@10.0.1
-            @semantic-release/github@8.0.6
-            @semantic-release/exec@6.0.3
+            @semantic-release/changelog
+            @semantic-release/git
+            @semantic-release/github
