--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,12 +16,12 @@ jobs:
     needs: [code-checks]
     uses: ./.github/workflows/_sem_release.yaml
     secrets:
-      semantic-release-token: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
       npm-token: ${{ secrets.NPM_TOKEN }}
     permissions:
       contents: write
       issues: write
       pull-requests: write
+      id-token: write
 
   publish-docs:
     name: Publish mkdocs to GitHub Pages
