feat: add .env file support with line number tracking
Add envFile option to load environment variables from .env files.
Parsed KEY=VALUE pairs merge with process.env (process.env wins).
Priority order: CLI > process.env > .env files > config files > defaults.

Also adds JSON source map support for line/column tracking in JSON
config files, matching existing YAML behavior.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@/settings": ["src/settings"],
       "@/types": ["src/types"],
       "@/utils": ["src/utils"],
-      "@/fileLoader": ["src/fileLoader"]
+      "@/fileLoader": ["src/fileLoader"],
+      "@/envFileLoader": ["src/envFileLoader"]
     }
   },
   "include": ["src", "tests", "example"]
