docs: replace MkDocs with Docusaurus 3
Remove the Python dependency chain (mkdocs, mkdocs-material, jinja2,
urllib3, requests, etc.) that generated recurring Dependabot alerts.
Docs now build with the same Node.js toolchain using Docusaurus 3 in
docs-only mode.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,11 +24,11 @@ jobs:
       id-token: write
 
   publish-docs:
-    name: Publish mkdocs to GitHub Pages
+    name: Publish docs to GitHub Pages
     needs: [release]
-    uses: ./.github/workflows/_mkdocs_publish.yaml
+    uses: ./.github/workflows/_docusaurus_publish.yaml
     secrets:
-      mkdocs-token: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
+      docs-token: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
     permissions:
       contents: write
       issues: write
