fix(ci): specify semantic-release v25 for npm OIDC support
cycjimmy/semantic-release-action@v6 defaults to semantic-release v24
which bundles @semantic-release/npm v12 (no OIDC). Explicitly set
semantic_version: 25 to get @semantic-release/npm v13 with OIDC
trusted publishing support.

--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -33,6 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          semantic_version: 25
           extra_plugins: |
             @semantic-release/changelog
             @semantic-release/git
