fix(ci): add @semantic-release/npm@13 as extra plugin for OIDC support
The action's bundled @semantic-release/npm@12 doesn't support OIDC.
Explicitly install @semantic-release/npm@13 via extra_plugins to
override the bundled version with one that supports trusted publishing.

--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -35,5 +35,6 @@ jobs:
         with:
           semantic_version: 25
           extra_plugins: |
+            @semantic-release/npm@^13
             @semantic-release/changelog
             @semantic-release/git
