fix(ci): replace cycjimmy action with direct npx semantic-release
The cycjimmy/semantic-release-action bundles its own @semantic-release/npm
which doesn't support OIDC trusted publishing. Instead, install
semantic-release@25 and @semantic-release/npm@13 as devDependencies
and run npx semantic-release directly, matching our other repositories.

--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -29,12 +29,6 @@ jobs:
       - name: Build to dist folder
         run: yarn build
       - name: Release
-        uses: cycjimmy/semantic-release-action@v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          semantic_version: 25
-          extra_plugins: |
-            @semantic-release/npm@^13
-            @semantic-release/changelog
-            @semantic-release/git
+        run: npx semantic-release
