--- a/package.json
+++ b/package.json
@@ -41,8 +41,15 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
     "@eslint/js": "^10.0.0",
+    "@mdx-js/react": "^3.0.0",
     "@meltstudio/tsconfig": "^2.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.6",
+    "@semantic-release/npm": "^13",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^22.0.0",
@@ -56,17 +63,15 @@
     "jest-html-reporters": "^3.1.4",
     "lint-staged": "^16.0.0",
     "prettier": "^3.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rimraf": "^6.1.3",
+    "semantic-release": "^25",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.4",
-    "typescript-eslint": "^8.24.0",
-    "@docusaurus/core": "^3.7.0",
-    "@docusaurus/preset-classic": "^3.7.0",
-    "@mdx-js/react": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "typescript-eslint": "^8.24.0"
   }
 }
