fix(ci): use GITHUB_TOKEN for docs deployment instead of PAT
The SEMANTIC_RELEASE_TOKEN was expired/invalid. Since branch protection
no longer requires PRs, GITHUB_TOKEN has sufficient permissions to
push to the gh-pages branch.

--- a/.github/workflows/_docusaurus_publish.yaml
+++ b/.github/workflows/_docusaurus_publish.yaml
@@ -2,10 +2,6 @@ name: Deploy Docusaurus
 
 on:
   workflow_call:
-    secrets:
-      docs-token:
-        description: "GitHub token for deploying docs"
-        required: true
 
 env:
   HUSKY: 0
@@ -31,5 +27,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.docs-token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
