docs: improve documentation for humans and AI agents
- Add docusaurus-plugin-llms to generate /llms.txt and /llms-full.txt
- Add JSDoc comments to all public exports (flows through to .d.ts)
- Add "Common Patterns" section with 6 copy-paste-ready recipes
- Add "Common Mistakes" section with 5 documented pitfalls
- Add "Documentation for AI Agents" section to README
- Update features list to reflect strict mode and removal of process.exit

Closes #81

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^22.0.0",
+    "docusaurus-plugin-llms": "^0.3.0",
     "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-jest": "^29.0.0",
