fix: correct baseUrl in generated llms.txt files
docusaurus-plugin-llms v0.3.0 strips the pathname from siteUrl when
constructing links, producing URLs like /docs/intro instead of
/config-loader/docs/intro. Add a post-build script to patch the URLs.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "replace-tspaths": "./scripts/replace-tspaths/index.mjs",
     "example:run": "ts-node -r tsconfig-paths/register ./example/index.ts",
     "prepare": "husky",
-    "docs:build": "docusaurus build",
+    "docs:build": "docusaurus build && node scripts/fix-llms-urls.mjs",
     "docs:serve": "docusaurus serve",
     "docs:start": "docusaurus start"
   },
