--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.4",
-    "typescript-eslint": "^8.24.0"
+    "typescript-eslint": "^8.24.0",
+    "zod": "^4.3.6"
   }
 }
