--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meltstudio/config-loader",
   "version": "3.1.0",
-  "description": "Melt Studio's tool for loading configurations into a Node.js application.",
+  "description": "Type-safe configuration loader with full TypeScript inference. Load from YAML, JSON, .env, environment variables, and CLI args.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/MeltStudio/config-loader",
@@ -14,8 +14,18 @@
     "configuration",
     "config",
     "yaml",
+    "json",
     "loader",
-    "config-node"
+    "env",
+    "environment",
+    "dotenv",
+    "cli",
+    "type-safe",
+    "typescript",
+    "schema",
+    "validation",
+    "zod",
+    "settings"
   ],
   "files": [
     "dist",
