chore: switch license from Apache-2.0 to MIT, rename CLAUDE.md to AGENTS.md
- Replace Apache-2.0 license with MIT across all references
- Rename CLAUDE.md to AGENTS.md for cross-agent compatibility
- Update CONTRIBUTING.md with PR workflow, conventional commits, and license agreement

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/MeltStudio/config-loader",
   "author": "MeltStudio <dev@meltstudio.co>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "engines": {
     "node": ">=20"
   },
