feat: add printConfig() debug helper for loadExtended() results
Formats resolved configuration as a readable table showing each value's
path, resolved value, source type, and detail (env var name, file:line,
CLI flag). Useful for debugging which source provided each setting.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/types": ["src/types"],
       "@/utils": ["src/utils"],
       "@/fileLoader": ["src/fileLoader"],
-      "@/envFileLoader": ["src/envFileLoader"]
+      "@/envFileLoader": ["src/envFileLoader"],
+      "@/printConfig": ["src/printConfig"]
     }
   },
   "include": ["src", "tests", "example"]
