feat: add sensitive field marking and maskSecrets utility
Add `sensitive: true` option for primitive fields to mark values that
should not be exposed in logs or debug output. The flag propagates to
ConfigNode metadata, enabling automatic masking.

- `printConfig()` auto-masks sensitive fields with "***"
- `maskSecrets(extendedResult)` masks sensitive values in loadExtended() results
- `maskSecrets(config, schema)` masks sensitive values in plain load() results
- Original objects are never mutated

Closes #86

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@/utils": ["src/utils"],
       "@/fileLoader": ["src/fileLoader"],
       "@/envFileLoader": ["src/envFileLoader"],
-      "@/printConfig": ["src/printConfig"]
+      "@/printConfig": ["src/printConfig"],
+      "@/maskSecrets": ["src/maskSecrets"]
     }
   },
   "include": ["src", "tests", "example"]
