--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@meltstudio/config-loader",
   "version": "3.5.0",
-  "description": "Type-safe configuration loader with full TypeScript inference. Load from YAML, JSON, .env, environment variables, and CLI args.",
+  "description": "Type-safe configuration loader with full TypeScript inference. Load from YAML, JSON, TOML, .env, environment variables, and CLI args.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/MeltStudio/config-loader",
@@ -15,6 +15,7 @@
     "config",
     "yaml",
     "json",
+    "toml",
     "loader",
     "env",
     "environment",
@@ -48,6 +49,7 @@
     "commander": "^14.0.0",
     "js-yaml": "^4.1.0",
     "js-yaml-source-map": "^0.2.2",
+    "smol-toml": "^1.6.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
