docs: add advanced example, update v1 deprecation notice
Split example app into basic/ and advanced/. The advanced example
demonstrates TOML config, .env files, oneOf constraints, sensitive
field masking, custom validation, printConfig(), maskSecrets(), and
error handling. Update v1 deprecation notice to remove outdated v2
reference. Add examples section to README.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
     "replace-tspaths": "./scripts/replace-tspaths/index.mjs",
-    "example:run": "ts-node -r tsconfig-paths/register ./example/index.ts",
+    "example:basic": "ts-node -r tsconfig-paths/register ./example/basic/index.ts",
+    "example:advanced": "ts-node -r tsconfig-paths/register ./example/advanced/index.ts",
     "prepare": "husky",
     "docs:build": "docusaurus build && node scripts/fix-llms-urls.mjs",
     "docs:serve": "docusaurus serve",
