feat: add watch mode with file watching, config diffing, and auto-reload
Add watch() method to SettingsBuilder that monitors config files for changes
and reloads automatically. File watchers use .unref() so they don't prevent
the process from exiting. Includes debounced reloads, error recovery (retains
last good config), directory watching, and sensitive field masking in change
events. Also adds diffConfig() utility for comparing two config objects.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
       "@/fileLoader": ["src/fileLoader"],
       "@/envFileLoader": ["src/envFileLoader"],
       "@/printConfig": ["src/printConfig"],
-      "@/maskSecrets": ["src/maskSecrets"]
+      "@/maskSecrets": ["src/maskSecrets"],
+      "@/sourceValidation": ["src/sourceValidation"],
+      "@/watcher": ["src/watcher"],
+      "@/diffConfig": ["src/diffConfig"]
     }
   },
   "include": ["src", "tests", "example"]
