feat!: ship dual CJS+ESM, migrate from yarn to pnpm
BREAKING CHANGE: Package now ships both CJS and ESM formats via the
`exports` field in package.json. This resolves compatibility issues with
TypeScript 5.9's `verbatimModuleSyntax` when using ESM imports.

- Build outputs: dist/index.js (CJS), dist/index.mjs (ESM), plus .d.ts
  and .d.mts type declarations
- Migrated from yarn to pnpm across all CI workflows, scripts, docs,
  CONTRIBUTING.md, Husky hooks, and VS Code config
- Added pnpm to installation instructions alongside npm and yarn
- Updated dependabot to also track GitHub Actions versions
- Added pnpm-lock.yaml to .prettierignore

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "node-terminal",
       "name": "Debug Current TS File (ts-node)",
       "request": "launch",
-      "command": "yarn example:run",
+      "command": "pnpm example:basic",
       "cwd": "${fileDirname}"
     }
   ]
