--- a/.github/workflows/_code_checks.yaml
+++ b/.github/workflows/_code_checks.yaml
@@ -7,20 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
       - name: "Setup node with cache"
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: "yarn"
+          cache: "pnpm"
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - name: Run lint
-        run: yarn lint
+        run: pnpm lint
       - name: Run type-check
-        run: yarn type-check
+        run: pnpm type-check
       - name: Run tests
-        run: yarn test
+        run: pnpm test
       - name: Run prettier
-        run: yarn prettier --check .
+        run: pnpm prettier --check .
       - name: Build docs
-        run: yarn docs:build
+        run: pnpm docs:build
