--- a/package.json
+++ b/package.json
@@ -3,10 +3,24 @@
   "version": "3.7.1",
   "description": "Type-safe configuration loader with full TypeScript inference. Load from YAML, JSON, TOML, .env, environment variables, and CLI args.",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
   "repository": "https://github.com/MeltStudio/config-loader",
   "author": "MeltStudio <dev@meltstudio.co>",
   "license": "MIT",
+  "packageManager": "pnpm@10.30.2",
   "engines": {
     "node": ">=20"
   },
@@ -34,7 +48,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rimraf ./dist && tsup src/index.ts --dts --config tsconfig.build.json",
+    "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts --config tsconfig.build.json",
     "lint": "eslint --max-warnings=0 --fix .",
     "type-check": "tsc --noEmit",
     "test": "jest --verbose",
