--- a/.github/workflows/_sem_release.yaml
+++ b/.github/workflows/_sem_release.yaml
@@ -19,18 +19,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-      - name: "Setup node with cache"
+      - name: "Setup node"
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: "pnpm"
+      - name: Upgrade npm for OIDC trusted publishing
+        run: npm install -g npm@latest
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install
       - name: Build to dist folder
-        run: pnpm build
+        run: npm run build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: pnpm exec semantic-release
+        run: npx semantic-release
